test-charts/openshift-checks/templates/deprecated.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openshift-checks-deprecated
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: deprecated-app
    spec:
      containers:
        - name: deprecated-container
          image: nginx:1.23.0
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
